Fix some layout issues

--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -63,8 +63,8 @@
         .site-title {
             font-weight: bold;
             width: 100%;
-            height: 100%;
-            transform: translate(0, 35%);
+            height: 10%;
+            transform: translate(0, 350%);
 
             a {
                 padding: 0 10px 2px 10px;
